cleanup, use KVP